7904138: JOL: Update heapdump-estimates for current JDK releases